--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,11 @@
 name = "haversine"
 version = "0.1.0"
 authors = ["Jeffrey Gilbert <visualjeff@linux.com>"]
+description = "haversine implemented in rust"
+documentation = "https://github.com/visualjeff/haversine"
+homepage = "https://github.com/visualjeff/haversine"
+repository = "https://github.com/visualjeff/haversine.git"
+readme = "https://github.com/visualjeff/haversine/blob/master/README.md"
+keywords = ["haversine", "distance"]
+license = "MIT"
+license-file = "https://github.com/visualjeff/haversine/blob/master/LICENSE"
